added search engine

--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,16 @@
   padding: 20px;
   margin: 20px auto;
   text-align: center;
+  background: lightgoldenrodyellow;
+}
+
+.App footer {
+  text-align: center;
+
+  margin: 30px 0;
+}
+.App header {
+  text-align: center;
+
+  margin: 30px 0 30px;
 }
