--- a/src/Results.css
+++ b/src/Results.css
@@ -6,5 +6,11 @@
   border-radius: 4px;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  margin: 0px 0;
+  margin: 15px 0;
+}
+
+.Results h2 {
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 1.6;
 }
