--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,16 @@
 .App {
   max-width: 650px;
   display: block;
-  padding: 30px;
-  margin: 20px auto;
+  padding: 0px 30px 10px;
+  margin: 10px auto;
   text-align: center;
   background-color: #f9f8fe;
 }
 .App .Logo {
-  max-width: 100px;
+  max-width: 200px;
   display: block;
   margin: 0 auto;
+  padding: 0;
 }
 
 .App footer {
